<resources>
    <string name="app_name">Cafe Order</string>
    <string name="logo_description">Логотип кафе.</string>
    <string name="welcom">Добро пожаловать!</string>
    <string name="hint_name">Введите ваше имя:</string>
    <string name="hint_password">Введите ваш пароль:</string>
    <string name="button_create_order">Создать заказ</string>
    <string name="warning">все поля должны быть заполнены</string>
    <string name="what_order">Привет, %s! Что будете заказывать</string>
    <string name="what_add_to_order">Что добавить в ваш %s?</string>
    <string name="napitok">выбирите вид напитка</string>
    <string name="tea">чай</string>
    <string name="coffee">кофе</string>
    <string name="default_name">клиент</string>
    <string name="default_password">пароль</string>
    <string name="milk">молоко</string>
    <string name="sugar">сахар</string>
    <string name="lemon">лимон</string>
    <string name="order">Имя: %s\nПароль: %s\nНапиток: %s\nВид напитка: %s\n</string>
    <string name="need_additions">"Необходимые добавки: "</string>
    <string name="add_to_order">Кнопка отправить заказ</string>


    <string-array name="options_of_coffee">
        <item>Американо</item>
        <item>Эспрессо</item>
        <item>Латте</item>
    </string-array>

    <string-array name="options_of_tea">
        <item>Черный</item>
        <item>Зеленый</item>
        <item>Красный</item>
    </string-array>
</resources>