<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightBrown">


    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/logo_description"
        app:srcCompat="@drawable/cofe" />

    <TextView
        android:id="@+id/textViewWelcome"
        android:textSize="36sp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcom" />

    <EditText
        android:id="@+id/editTextTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_margin="8dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:layout_margin="8dp"
        android:textColorHint="@color/white"
        android:hint="@string/hint_password"/>

    <Button
        android:id="@+id/buttonCreateOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_create_order"
        android:textSize="24dp"
        android:onClick="onClickCreateOrder"/>

</LinearLayout>
