<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateOrderActivity"
    android:background="@color/lightBrown">

    <TextView
        android:id="@+id/TextViewHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/what_order"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/darkBrown"
        />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/TextViewHello"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp">

        <RadioButton
            android:id="@+id/radioButtonTea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tea"
            android:layout_margin="8dp"
            android:checked="true"
            android:onClick="onClickChangeDrink"/>

        <RadioButton
            android:id="@+id/radioButtonCoffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coffee"
            android:layout_margin="8dp"
            android:onClick="onClickChangeDrink"/>

    </RadioGroup>

    <TextView
        android:id="@+id/TextViewAdditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/what_add_to_order"
        android:gravity="center"
        android:textColor="@color/darkBrown"
        android:layout_margin="8dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/checkboxMilk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/milk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/checkboxSugar"
        app:layout_constraintTop_toBottomOf="@+id/TextViewAdditions"
        android:layout_margin="8dp"/>

    <CheckBox
        android:id="@+id/checkboxSugar"
        app:layout_constraintStart_toEndOf="@+id/checkboxMilk"
        app:layout_constraintEnd_toStartOf="@+id/checkboxLemon"
        android:text="@string/sugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/TextViewAdditions"
        android:layout_margin="8dp"/>

    <CheckBox
        android:id="@+id/checkboxLemon"
        app:layout_constraintStart_toEndOf="@+id/checkboxSugar"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/lemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/TextViewAdditions"
        android:layout_margin="8dp"/>

    <TextView
        android:id="@+id/TextViewChooseDrink"
        app:layout_constraintTop_toBottomOf="@+id/checkboxSugar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/napitok"
        android:textColor="@color/darkBrown"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="8dp"/>

    <Spinner
        android:id="@+id/spinnerTea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/options_of_tea"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextViewChooseDrink"
        android:layout_margin="8dp"/>

    <Spinner
        android:id="@+id/spinnerCoffee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/options_of_coffee"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextViewChooseDrink"
        android:layout_margin="8dp"/>

    <ImageView
        android:id="@+id/buttonSendOrder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/butten"
        android:layout_margin="8dp"
        android:contentDescription="@string/add_to_order"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="onClickSendOrder"
        />


</androidx.constraintlayout.widget.ConstraintLayout>